--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.10.14",
     "@mui/x-date-pickers": "^5.0.13",
     "@nextui-org/react": "^1.0.0-beta.10",
+    "@supabase/supabase-js": "^2.2.3",
     "axios": "^1.1.3",
     "dayjs": "^1.11.7",
     "flowbite": "^1.5.3",
