--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
     "flowbite-react": "^0.2.0",
     "mapbox-gl": "^2.8.2",
     "moment": "^2.29.4",
-    "next": "12.1.6",
+    "next": "^13.1.6",
     "next-auth": "^4.15.0",
-    "react": "18.1.0",
+    "react": "^18.2.0",
     "react-autocomplete-hint": "^2.0.0",
-    "react-dom": "18.1.0",
+    "react-dom": "^18.2.0",
     "turnstone": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^13.1.6",
     "postcss": "^8.4.13",
     "tailwind-styled-components": "^2.1.7",
     "tailwindcss": "^3.0.24"
